--- a/app/app.css
+++ b/app/app.css
@@ -1,82 +1,105 @@
 *{
     margin:0;
     padding:0;
+    border: 0px;
 }
-
-body{
-    font:15px/1.3 'Open Sans', sans-serif;
-    color: #5e5b64;
-    text-align:center;
+.centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
 }
-
-a, a:visited {
-    outline:none;
-    color:#389dc1;
+#main {
+    width: 500px;
+    height: 500px;
+    border-radius: 50%;
+    border: 10px solid;
+    background-color: black;
+    font-size: 0;
 }
-
-a:hover{
-    text-decoration:none;
+.quadrant {
+    width: 230px;
+    height: 230px;
+    display: inline-block;
+    border: 10px solid;
 }
-
-section, footer, header, aside, nav{
-    display: block;
+#top-l {
+    border-top-left-radius: 100%;
+    background-color: green;
 }
-
-/*-------------------------
-    The menu
---------------------------*/
-
-nav{
-    display:inline-block;
-    margin:60px auto 45px;
-    background-color:#5597b4;
-    box-shadow:0 1px 1px #ccc;
-    border-radius:2px;
+#top-r {
+    border-top-right-radius: 100%;
+    background-color: red;
 }
-
-nav a{
-    display:inline-block;
-    padding: 18px 30px;
-    color:#fff !important;
-    font-weight:bold;
-    font-size:16px;
-    text-decoration:none !important;
-    line-height:1;
-    text-transform: uppercase;
-    background-color:transparent;
-
-    -webkit-transition:background-color 0.25s;
-    -moz-transition:background-color 0.25s;
-    transition:background-color 0.25s;
+#bot-l {
+    border-bottom-left-radius: 100%;
+    background-color: yellow;
 }
-
-nav a:first-child{
-    border-radius:2px 0 0 2px;
+#bot-r {
+    border-bottom-right-radius: 100%;
+    background-color: blue;
 }
-
-nav a:last-child{
-    border-radius:0 2px 2px 0;
+#panel {
+    width: 240px;
+    height: 240px;
+    border-radius: 50%;
+    border: 20px solid;
+    background-color: orange;
+    text-align: center;
 }
-
-nav.home .home,
-nav.projects .projects,
-nav.services .services,
-nav.contact .contact{
-    background-color:#e35885;
+#middle-row {
+    font-size: 0;
 }
-
-p{
-    font-size:22px;
-    font-weight:bold;
-    color:#7d9098;
+#trademark {
+    font-size: 50px;
+    margin: 20px;
 }
-
-p b{
-    color:#ffffff;
-    display:inline-block;
-    padding:5px 10px;
-    background-color:#c4d7e0;
-    border-radius:2px;
-    text-transform:uppercase;
-    font-size:18px;
+.superscript {
+    font-size: 50%;
+    vertical-align: super;
+}
+.label {
+    font-size: 16px;
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+}
+.column {
+    height: 70px;
+    width : 60px;
+    text-align: center;
+    border: 1px solid;
+    display: inline-block;
+    position: absolute;
+}
+#count-column {
+    transform: translateX(-170%);
+}
+#led {
+    width: 60px;
+    height: 40px;
+    background-color: black;
+    border-radius: 5px;
+}
+#start-column {
+    transform: translateX(-50%);
+}
+.round-button {
+    margin: auto;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: pink;
+}
+#strict-column {
+    transform: translateX(70%);
+}
+.mode-led {
+    margin: auto;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: black;
+    transform: translateY(-20%);
 }
