--- a/app/app.css
+++ b/app/app.css
@@ -62,7 +62,7 @@ body {
 }
 #trademark {
     font-size: 130%;
-    margin: 20px;
+    margin: 25px;
 }
 .superscript {
     font-size: 50%;
@@ -147,14 +147,17 @@ body {
     display: inline-block;
     box-shadow: 0 0px 1px 1px rgba(216, 216, 216, 0.8) inset;
 }
-#switch-button {
+.switch-button {
     width: 15px;
     height: 14px;
     background-color: blue;
     border-radius: 2px
     display: inline-block;
-    transform: translate(18px, 2px);
     position: absolute;
+    transform: translateY(2px);
+}
+.switch-button-on {
+    transform: translate(18px, 2px);
 }
 .switch-label {
 }
