Fix background image size

--- a/app/app.css
+++ b/app/app.css
@@ -6,6 +6,7 @@
 body {
     background-image: url("https://static.pexels.com/photos/139306/pexels-photo-139306-large.jpeg"), url("https://static.pexels.com/photos/139325/pexels-photo-139325.jpeg");
     background-color: rgb(204, 136, 0);
+    background-size: cover;
 }
 .centered {
     position: absolute;
